--- a/client/to-do-list-web/src/app/pages/login/login.component.html
+++ b/client/to-do-list-web/src/app/pages/login/login.component.html
@@ -1,13 +1,25 @@
-<h1>Dont Forget!</h1>
+<main>
+  <section class="login-section">
+    <h2>Login</h2>
 
-<div>
-  <h2>Login</h2>
-  <input type="email" placeholder="Email" />
-  <!-- insert icon for email input -->
-  <input type="password" placeholder="Password" />
-  <!-- insert icon for password input -->
-  <span>FORGOT YOUR PASSWORD?</span>
-  <button>SIGN IN</button>
-  <button>SIGN IN WITH GOOGLE</button>
-  <button>SIGN UP</button>
-</div>
+    <div class="inputs">
+      <input type="email" placeholder="Email" />
+      <!-- insert icon for email input -->
+
+      <input type="password" placeholder="Password" />
+      <!-- <img src="assets/eye.svg" width="18" height="18"/> -->
+      <!-- insert icon for password input -->
+
+    </div>
+    <span>FORGOT YOUR PASSWORD?</span>
+
+    <div class="bottons">
+      <button>LOGIN</button>
+      <button>SIGN UP</button>
+    </div>
+  </section>
+
+  <section class="main-section">
+    <h1>Dont Forget it!</h1>
+  </section>
+</main>
