--- a/client/to-do-list-web/src/app/pages/login/login.component.html
+++ b/client/to-do-list-web/src/app/pages/login/login.component.html
@@ -20,6 +20,7 @@
   </section>
 
   <section class="main-section">
+    <img src="./../../../assets/Logo-sem-fundo.png" width="105px" height="100px"/>
     <h1>Dont Forget it!</h1>
   </section>
 </main>
