--- a/client/to-do-list-web/src/app/pages/login/login.component.scss
+++ b/client/to-do-list-web/src/app/pages/login/login.component.scss
@@ -15,13 +15,16 @@ main {
 
   .main-section {
     display: flex;
-    flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     flex-grow: 1;
 
     h1 {
       font-size: 80px;
+      font-weight: 800;
+    }
+    img{
+      margin: 0 40px;
     }
   }
 
@@ -36,7 +39,7 @@ main {
 
     h2 {
       font-size: 62px;
-      color: #dadada;
+      color: var(--primary);
       margin-bottom: 82px;
     }
 
@@ -50,8 +53,8 @@ main {
       input {
         background: none;
         border: none;
-        border-bottom: 1px solid #dadada;
-        color: #dadada;
+        border-bottom: 1px solid var(--primary-010);
+        color: var(--primary);
         font-size: 24px;
       }
     }
@@ -59,7 +62,7 @@ main {
     span {
       margin-top: 10px;
       font-size: 14px;
-      color: #dadada;
+      color: var(--primary);
       cursor: pointer;
     }
 
@@ -81,15 +84,20 @@ main {
 
         font-size: 20px;
 
-        background-color: #dadada;
+        background-color: var(--primary);
 
         cursor: pointer;
+      }
+
+      button:hover {
+        background-color: var(--primary-010);
+        transition: 0.5s;
+
       }
     }
   }
 }
 
 ::placeholder {
-  padding-left: 5px;
-  color: #dadada;
+  color: var(--primary);
 }
