feat: adjusts to finish login page

--- a/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.html
@@ -5,8 +5,8 @@
     <ng-content></ng-content>
 
     <div class="btn-wrapper">
-      <button>{{primaryBtnText}}</button>
-      <button>{{secundaryBtnText}}</button>
+      <button (click)="submit()">{{ primaryBtnText }}</button>
+      <button (click)="navigate()">{{ secundaryBtnText }}</button>
     </div>
   </section>
 
