--- a/client/to-do-list-web/src/scss/base/_reset.scss
+++ b/client/to-do-list-web/src/scss/base/_reset.scss
@@ -6,7 +6,7 @@
 
 html,
 body {
-  font-family: "Raleway", 'Times New Roman', Times, serif ;
+  font-family: "Comic neue", 'Times New Roman', Times, serif;
   height: 100%;
 }
 
