feat: fix input validator and import toastr library

--- a/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -72,6 +72,10 @@ main {
           background-color: var(--primary);
   
           cursor: pointer;
+
+          &:disabled{
+            opacity: 0.8;
+          }
         }
   
         button:hover {
