--- a/client/to-do-list-web/src/app/components/primary-input/primary-input.component.html
+++ b/client/to-do-list-web/src/app/components/primary-input/primary-input.component.html
@@ -2,6 +2,8 @@
   <input
     [type]="inputType"
     [placeholder]="placeholder"
+    [value]="value"
+    (input)="onInput($event)"
   />
   <div class="icon">
     <ng-content></ng-content>
