--- a/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.html
@@ -5,7 +5,7 @@
     <ng-content></ng-content>
 
     <div class="btn-wrapper">
-      <button (click)="submit()">{{ primaryBtnText }}</button>
+      <button (click)="submit()" [disabled]="disablePrimaryBtn">{{ primaryBtnText }}</button>
       <button (click)="navigate()">{{ secundaryBtnText }}</button>
     </div>
   </section>
