--- a/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -1,92 +1,84 @@
 main {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    width: 100%;
-    height: 100%;
-    background-image: url("/assets/background-image.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  
-    section {
-      height: 100%;
-      display: flex;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  background-image: url("/assets/background-image.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
+  section {
+    height: 100%;
+    display: flex;
+  }
+
+  .main-section {
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-grow: 1;
+
+    h1 {
+      font-size: 80px;
+      font-weight: 800;
     }
-  
-    .main-section {
-      justify-content: flex-start;
-      align-items: flex-start;
-      flex-grow: 1;
-  
-      h1 {
-        font-size: 80px;
-        font-weight: 800;
-      }
-      img{
-        margin: 0 40px;
-      }
+    img {
+      margin: 0 40px;
     }
-  
-    .login-section {
-      flex-direction: column;
+  }
+
+  .login-section {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    flex-grow: 0.5;
+
+    background-color: rgba($color: #2e1f1f, $alpha: 0.7);
+
+    h2 {
+      font-size: 62px;
+      color: var(--primary);
+    }
+
+    .wrapper {
+      margin: 20px 10px;
+    }
+
+    .btn-wrapper {
+      display: flex;
       justify-content: center;
       align-items: center;
-      flex-grow: 0.5;
-  
-      background-color: rgba($color: #2e1f1f, $alpha: 0.7);
-  
-      h2 {
-        font-size: 62px;
-        color: var(--primary);
-        margin-bottom: 82px;
-      }
-  
-  
-      span {
-        margin-top: 10px;
-        font-size: 14px;
-        color: var(--primary);
-        cursor: pointer;
-      }
-  
-      .btn-wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 30px;
-  
-        margin-top: 70px;
-        width: 70%;
-  
-        button {
-          width: 100%;
-          height: 50px;
-          border-radius: 10px;
-          border-style: none;
-          font-weight: 500;  
-          font-size: 20px;
-  
-          background-color: var(--primary);
-  
-          cursor: pointer;
+      flex-direction: column;
+      gap: 10px;
+      margin: 20px 0;
+      width: 70%;
 
-          &:disabled{
-            opacity: 0.8;
-          }
+      button {
+        width: 100%;
+        height: 50px;
+        border-radius: 10px;
+        border-style: none;
+        font-weight: 500;
+        font-size: 20px;
+
+        background-color: var(--primary);
+
+        cursor: pointer;
+
+        &:disabled {
+          opacity: 0.8;
         }
-  
-        button:hover {
-          background-color: var(--primary-010);
-          transition: 0.5s;
-        }
+      }
+
+      button:hover {
+        background-color: var(--primary-light);
+        transition: 0.5s;
       }
     }
   }
-  
-  ::placeholder {
-    color: var(--primary);
-  }
-  
+}
+
+::placeholder {
+  color: var(--primary);
+}
