--- a/client/to-do-list-web/src/app/components/primary-input/primary-input.component.html
+++ b/client/to-do-list-web/src/app/components/primary-input/primary-input.component.html
@@ -1,11 +1,19 @@
-<div class="input-content">
-  <input
-    [type]="inputType"
-    [placeholder]="placeholder"
-    [value]="value"
-    (input)="onInput($event)"
-  />
-  <div class="icon">
-    <ng-content></ng-content>
+<div class="input-around">
+  @if ([label]) {
+  <label [for]="id">{{ label }}</label>
+  }
+
+  <div class="input-content">
+    <input
+      [id]="id"
+      [type]="inputType"
+      [placeholder]="placeholder"
+      [value]="value"
+      (input)="onInput($event)"
+      autocomplete="new-password"
+    />
+    <div class="icon">
+      <ng-content></ng-content>
+    </div>
   </div>
 </div>
