refactor: change and create color variables

--- a/client/to-do-list-web/src/scss/theme/_variables.scss
+++ b/client/to-do-list-web/src/scss/theme/_variables.scss
@@ -1,14 +1,14 @@
 :root{
+    --primary-light: #FEDCBA;
     --primary: #FDBF78;
-    --primary-010: #cacaca;
+    --primary-dark: #FCA564;
 
-    // --second: 
-    // --second-010:
 
     --white: #ffffff;
 
     --black: #10101a;
     --black-010: #2a2a30;
 
-    --grey: #9b9ba0;
+    --grey: #CACACA;
+    --grey-dark: #838383;
 }
