--- a/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/client/to-do-list-web/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -2,29 +2,34 @@ main {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+
   width: 100%;
   height: 100%;
-  background-image: url("/assets/background-image.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 
   section {
-    height: 100%;
     display: flex;
   }
 
   .main-section {
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     flex-grow: 1;
+    height: auto;
+    order: 2;
 
     h1 {
       font-size: 80px;
+      text-align: center;
       font-weight: 800;
     }
     img {
       margin: 0 40px;
+    }
+
+    @media (max-width: 520px){
+      h1{
+        font-size: 62px;
+      }
     }
   }
 
@@ -33,6 +38,8 @@ main {
     justify-content: space-around;
     align-items: center;
     flex-grow: 0.5;
+    height: 100%;
+    order: 1;
 
     background-color: rgba($color: #2e1f1f, $alpha: 0.7);
 
@@ -75,6 +82,19 @@ main {
         background-color: var(--primary-light);
         transition: 0.5s;
       }
+    }
+  }
+
+  @media (max-width: 820px) {
+    flex-wrap: wrap;
+
+    .main-section {
+      order: 1;
+      flex-wrap: wrap;
+    }
+    .login-section {
+      order: 2;
+      flex-grow: 1;
     }
   }
 }
