--- a/client/to-do-list-web/src/scss/base/_reset.scss
+++ b/client/to-do-list-web/src/scss/base/_reset.scss
@@ -8,6 +8,12 @@ html,
 body {
   font-family: "Comic neue", 'Times New Roman', Times, serif;
   height: 100%;
+
+  background-image: url("/assets/background-image.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 textarea:focus,
