refactor: adjusts in html and css

--- a/client/to-do-list-web/src/app/pages/login/login.component.html
+++ b/client/to-do-list-web/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <app-default-login-layout
-  title="Login"
+  title="LOGIN"
   primaryBtnText="Login Now"
-  secundaryBtnText="SignUp"
+  secundaryBtnText="Sign Up"
   [disablePrimaryBtn]="!loginForm.valid"
   (submit)="submit()"
   (navigate)="navigate()"
@@ -27,7 +27,7 @@
           height="29"
         />
       </app-primary-input>
-      <span>FORGOT YOUR PASSWORD?</span>
     </div>
+    <span>FORGOT YOUR PASSWORD?</span>
   </form>
 </app-default-login-layout>
